# 42-Cursus

./: .gitignore  Makefile  README.md  ft_atoi.c  ft_isalpha.c  ft_memcmp.c  ft_memcpy.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strtrim.c
00-libft/: ft_atoi.c  ft_lstadd_front.c  ft_lstiter.c  ft_lstsize.c  ft_putstr_fd.c  ft_strnstr.c
01-ft_printf/: Makefile  ft_printf_print_nums.c  main.c
01-ft_printf_2/: Makefile  main.c
01-get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
02-minitalk/: Makefile
02-push_swap/: main.c
02-push_swap(hourglass)/: Makefile  main.c
02-push_swap(quick_sort)/: Makefile  main.c
02-so_long/: Makefile
03-minishell/: .gitignore  Makefile  minishell.c  minishell.h  simpson
05-ft_containers/: .clang-format  Makefile  algorithm.hpp  construct.hpp  iterator.hpp  main.cpp  main.out  map.hpp  pair.hpp  set.hpp  stack.hpp  tree.h  tree.hpp  type_traits.hpp  utility.hpp  vector.h  vector.hpp
05-inception/: Makefile
ft_printf/: .gitignore  CMakeLists.txt  a.out  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_printf_print_nums.c  ft_printf_print_str.c  ft_printf_utils.c
ft_printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf/libft/: ft_lstier.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_strchr.c  libft.h
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
gnl_modify/: get_next_line_utils.c
libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_split.c  (+15 more)
(+333 files in other folders)
